# hr-text2sql-analytics-agent

./: README.md  pyproject.toml  requirements.txt
data/: oss_ebase.json  skills.json
src/sber_hrp_agent_text2sql/: agent.py  config.py  errors.py  gigamodels.py
src/sber_hrp_agent_text2sql/custom_retrievers/: oss_ebase_embs.json  skills_ebase_embs.json
src/sber_hrp_agent_text2sql/nodes/: attributes_processing.py  decompose.py  generation_execution.py  preparations_inspections.py
src/sber_hrp_agent_text2sql/promts/: add.py  decompose.py  main.py  tasks.py
src/sber_hrp_agent_text2sql/schemas/: agent_context.py  agent_state.py  db_info.py  structured_output.py
src/sber_hrp_agent_text2sql/utils/: node_log.py  oss.py  parser_processing.py  person.py  sql.py
