[build-system]
requires = ["hatchling==1.11.0", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "hrp_agent_text2sql"
version = "0.1.5"
authors = [
    { name="Developer", email="developer@gmail.com" },
]
description = "HRP: text2sql agent"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]
